# nvidia_project

./: .gitignore  LICENSE  README.md  record  record.md
3D_modle/: README.md
VCU/: PIX自动驾驶CAN协议.xlsx  README.md
VCU/PIX_VCU_CODE_OLD_VERSION/: ADC0.lst  ADC1.lst  CAN.lst  CC2.lst  FUNC0.lst  GPT2.lst  MAIN.lst  SCS.lst  U2C0.lst  USIC1.lst  USIC2.lst  VARI0.lst  VEHI0.lst  pid_controler.lst  speed_control.lst  steering.lst  tiaoshi.M66  tiaoshi.lnp  tiaoshi.plg  tiaoshi.uvproj  tiaoshi_uvopt.bak  tiaoshi_uvproj.bak
VCU/PIX_VCU_CODE_OLD_VERSION/bulid/: ADC0.LST  ADC1.LST  CAN.LST  CC2.LST  FUNC0.LST  IO.LST  MC33993.C.bak  U0C0.LST  U1C0.LST  U2C0.LST  USIC0.LST  USIC2.LST  VEHI0.LST  breaking_control.LST  differential_control.LST  pid_controler.LST  steering.LST  tiaoshi.H86  tiaoshi.M66  tiaoshi.dpt  tiaoshi.plg  tiaoshi.rtf  tiaoshi.uvopt  vehicle_control.LST
VCU/PIX_VCU_CODE_OLD_VERSION/lib/: CC2.h  FUNC0.h  MAIN.h  U0C1.h  U1C0.h  USIC0.h  USIC1.h  USIC2.h  VARI0.h  VEHI0.h  XC22xxMREGS.H  differential_control.h  remote.h  steering.h
VCU/PIX_VCU_CODE_OLD_VERSION/source/: ADC0.c  CAN.c  CC2.c  GPT1.c  GPT2.c  MC33993.C  U0C0.c  U0C1.c  USIC0.c  USIC1.c  USIC2.c  breaking_control.c  differential_control.c  pid_controler.c  remote.c  vehicle_control.c
catkin_ws/: README.md
catkin_ws/src/control_test/: CMakeLists.txt  package.xml
catkin_ws/src/control_test/launch/: control_test.launch  ycy_test.launch
catkin_ws/src/control_test/scripts/: teleop_twist_keyboard_class.py
catkin_ws/src/control_test/src/: control_test.cpp  receive_test.cpp  send_test.cpp
catkin_ws/src/learning_image_transport/: CMakeLists.txt  package.xml  readme.txt
catkin_ws/src/learning_image_transport/include/: detectslot.h
catkin_ws/src/learning_image_transport/launch/: camera.launch
catkin_ws/src/learning_image_transport/scripts/: my_publisher.py  my_subsriber.py  parking.py  video_get.py
catkin_ws/src/learning_image_transport/src/: detectslot.cpp  my_publisher.cpp  my_subscriber.cpp
catkin_ws/src/lio_sam/config/: params.yaml
catkin_ws/src/lio_sam/launch/include/config/: rviz.rviz
catkin_ws/src/lslidar_c16/lslidar_c16_decoder/launch/: lslidar_c16.launch
catkin_ws/src/lslidar_c16/lslidar_c16_decoder/src/: convert.cc
catkin_ws/src/pix_can/: CMakeLists.txt
catkin_ws/src/pix_can/nodes/: pix_can_write.cpp  vehicle_speed_control.cpp
catkin_ws/src/ros_rslidar-master/rslidar_pointcloud/src/: convert.cc
catkin_ws/src/spinnaker_sdk_camera_driver-master/params/: test_params.yaml
catkin_ws/src/velodyne-master/velodyne_pointcloud/src/conversions/: transform.cc
doc/: PIX自动驾驶CAN协议- 公开版(1).xlsx  README.md
geo_pos/: CXZX.rviz
pixbot/: README.md  README_CH.md
pixbot/VCU/PIX_VCU_CODE_OLD_VERSION/: GPT1.lst  IO.lst  MC33993.lst  U0C0.lst  U0C1.lst  U1C0.lst  USIC0.lst  breaking_control.lst  differential_control.lst  tiaoshi.uvopt  vehicle_control.lst
pixbot/VCU/PIX_VCU_CODE_OLD_VERSION/bulid/: GPT1.LST  GPT2.LST  MAIN.LST  MC33993.LST  SCS.LST  Start_V3.A66  Start_V3.LST  U0C1.LST  USIC1.LST  VARI0.LST  Variable.LST  remote.LST  speed_control.LST  speed_trl.LST  tiaoshi.dav  tiaoshi.lnp  tiaoshi.uvgui.zdc81
pixbot/VCU/PIX_VCU_CODE_OLD_VERSION/lib/: ADC0.h  ADC1.h  CAN.h  GPT1.h  GPT2.h  IO.h  MC33993.H  SCS.h  U0C0.h  U2C0.h  breaking_control.h  pid_controler.h  speed_control.h  vehicle_control.h
pixbot/VCU/PIX_VCU_CODE_OLD_VERSION/source/: ADC1.c  IO.c  MAIN.c  SCS.c  U1C0.c  U2C0.c  speed_control.c  steering.c
pixbot/doc/: PIX底盘开放物理接口-公开版.xlsx
pixbot/example/: README.md
pixcan/: pcanview.xmt
pixcan/.catkin_tools/profiles/default/: devel_collisions.txt
pixcan/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
pixcan/devel/include/pix_can/: CANTestInfo.h
pixcan/devel/lib/pix_can/: pix_can_read  pix_can_write
pixcan/devel/lib/pkgconfig/: pix_can.pc
pixcan/devel/lib/python2.7/dist-packages/pix_can/msg/: _CANTestInfo.py  __init__.py
pixcan/devel/share/common-lisp/ros/pix_can/msg/: CANTestInfo.lisp  _package.lisp  _package_CANTestInfo.lisp  pix_can-msg.asd
pixcan/devel/share/gennodejs/ros/pix_can/msg/: CANTestInfo.js  _index.js
pixcan/devel/share/pix_can/cmake/: pix_can-msg-extras.cmake  pix_can-msg-paths.cmake  pix_canConfig.cmake
pixcan/devel/share/roseus/ros/pix_can/: manifest.l
pixcan/devel/share/roseus/ros/pix_can/msg/: CANTestInfo.l
pixcan/src/pix_can/include/: vehicle_speed_control.h
pixcan/src/pix_can/launch/: pcanread.launch  pcanwrite.launch
pixcan/src/pix_can/msg/: CANTestInfo.msg
pixcan/src/pix_can/nodes/: pix_can_read.cpp
